Inject JSDoc options documentation into README

--- a/jsdoc2md/README.hbs
+++ b/jsdoc2md/README.hbs
@@ -8,24 +8,7 @@ Based on <https://github.com/dotherightthing/markdown-it-table-wrapper>.
 
 ## Usage
 
-<a name="TableWrapperPlugin"></a>
-
-## TableWrapperPlugin
-**Kind**: global class  
-**Summary**: Wraps table in a Vue component and injects an HTML caption  
-**Access**: public  
-<a name="new_TableWrapperPlugin_new"></a>
-
-### new TableWrapperPlugin(options)
-
-| Param | Type | Default | Description |
-| --- | --- | --- | --- |
-| options | <code>object</code> |  | Instance options |
-| [options.captionFromPrecedingSiblingTag] | <code>string</code> | <code>&quot;p&quot;</code> | Tag of a preceding element to pull caption text from |
-| [options.captionLinerClass] | <code>string</code> | <code>&quot;caption-liner&quot;</code> | CSS class hook for styling the table caption |
-| [options.tableWrapperClass=] | <code>string</code> |  | CSS class hook for styling the table wrapper |
-| [options.tableWrapperTag] | <code>string</code> | <code>&quot;TableWrapper&quot;</code> | Tag name for the table wrapper (or name of the Vue component, authored separately) |
-
+{{>main}}
 
 ### Example
 
